fix overflow slider bug

--- a/_html_lot3/app/assets/sass/base/_thomon.scss
+++ b/_html_lot3/app/assets/sass/base/_thomon.scss
@@ -647,6 +647,7 @@ header #navigation ul.user li a .icon {
     cursor: grab;
     cursor: -moz-grab;
     cursor: -webkit-grab;
+    overflow: hidden;
 }
 
 .block-diaporama .slider-01 figcaption{
